@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
     <variable name="LabelCategoriesSmallVar">
-		<value condition="Control.HasFocus(5900) | Control.HasFocus(6900) | Control.HasFocus(7900) | Control.HasFocus(8900) | Control.HasFocus(11900) | Control.HasFocus(12900) | Control.HasFocus(13900) | Control.HasFocus(16900)">$INFO[Container($PARAM[list_id]).ListItem.Label]</value>
+		<value condition="Control.HasFocus(59001) | Control.HasFocus(69001) | Control.HasFocus(79001) | Control.HasFocus(89001) | Control.HasFocus(119001) | Control.HasFocus(129001) | Control.HasFocus(139001) | Control.HasFocus(169001)">$INFO[Container($PARAM[list_id]).ListItem.Label]</value>
 		<value>$LOCALIZE[31148]</value>
 	</variable>
     <variable name="VideoLibraryScanLabelVar">
